...
        button.setImage(UIImage(systemName: "person.fill.checkmark"),
                        for: .normal)
        button.addTarget(self,
                         action: #selector(signUpButtonHandler(_:)),
                         for: .touchUpInside)
        button.isAccessibilityElement = true
        button.accessibilityIdentifier = "register"
        return button
    }()

    // MARK: - Inits
    override init(frame: CGRect) {
        super.init(frame: frame)
...
