...
        button.setImage(UIImage(systemName: "person.crop.square.filled.and.at.rectangle"),
                        for: .normal)
        button.addTarget(self,
                         action: #selector(signUpButtonHandler(_:)),
                         for: .touchUpInside)
        button.isAccessibilityElement = true
        button.accessibilityIdentifier = "sign up"
        return button
    }()

    private lazy var signUpStackView: UIStackView = {
        let stack = UIStackView(arrangedSubviews: [
            signUpLabel,
...
